--- a/02-exercises/03-todomvc-client/package.json
+++ b/02-exercises/03-todomvc-client/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "postinstall": "cd client && npm install",
-    "test": "mocha test/*-spec.js",
+    "test": "mocha --no-timeouts test/*-spec.js",
     "client-build": "cd client && npm run build",
     "start:watch": "nodemon --ignore client",
     "clean": "rm -rf node_modules && rm -rf client/node_modules"
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5",
+    "mocha": "^3.2.0",
     "node-fetch": "^1.4.1",
     "nodemon": "^1.9.1",
     "tmp": "0.0.28"
