--- a/03-solved-exercises/01-db-warmup/package.json
+++ b/03-solved-exercises/01-db-warmup/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/*-spec.js",
+    "test": "mocha --no-timeouts test/*-spec.js",
     "clean": "rm -rf node_modules"
   },
   "author": "Gil Tayar <gil@tayar.org>",
@@ -13,7 +13,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-dom": "^1.4.0",
-    "mocha": "^2.4.5",
+    "mocha": "^3.2.0",
     "tmp": "0.0.28"
   }
 }
