--- a/03-solved-exercises/04-todomvc-server/package.json
+++ b/03-solved-exercises/04-todomvc-server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "postinstall": "cd client && npm install",
-    "test": "mocha test/*-spec.js",
+    "test": "mocha --no-timeouts test/*-spec.js",
     "build": "npm run client-build",
     "client-build": "cd client && npm run build",
     "start:watch": "nodemon --ignore client",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5",
+    "mocha": "^3.2.0",
     "node-fetch": "^1.4.1",
     "nodemon": "^1.9.1",
     "tmp": "0.0.28",
